Update Catalan translation

--- a/locale/ca.po
+++ b/locale/ca.po
@@ -7,14 +7,14 @@ msgstr ""
 "Project-Id-Version: audacity 2.1.2\n"
 "Report-Msgid-Bugs-To: audacity-translation@lists.sourceforge.net\n"
 "POT-Creation-Date: 2016-08-22 18:29+0200\n"
-"PO-Revision-Date: 2016-08-22 18:29+0200\n"
+"PO-Revision-Date: 2016-10-18 19:24+0200\n"
 "Last-Translator: Robert Antoni Buj Gelonch <rbuj@fedoraproject.org>\n"
 "Language-Team: Catalan <ca@li.org>\n"
 "Language: ca\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.8.8\n"
+"X-Generator: Poedit 1.8.10\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 
 #: lib-src/FileDialog/gtk/FileDialogPrivate.cpp:75
@@ -126,7 +126,7 @@ msgstr "Encabeix &verticalment"
 
 #: lib-src/mod-nyq-bench/NyqBench.cpp:779
 msgid "Split &Horizontally"
-msgstr ""
+msgstr "Encabeix &horitzontalment"
 
 #: lib-src/mod-nyq-bench/NyqBench.cpp:781
 msgid "Show S&cript"
@@ -150,7 +150,7 @@ msgstr "Barres d'eines"
 
 #: lib-src/mod-nyq-bench/NyqBench.cpp:791
 msgid "&Go\tF5"
-msgstr "&Ves\tF5"
+msgstr "&Vés\tF5"
 
 #: lib-src/mod-nyq-bench/NyqBench.cpp:792
 msgid "&Stop\tF6"
@@ -765,7 +765,7 @@ msgid ""
 "data loss or cause your system to crash.\n"
 "\n"
 msgstr ""
-"Si feu funcionar simultàniament dues còpies d'Audacity us\n"
+"Si executeu simultàniament dues còpies d'Audacity, us\n"
 "podeu trobar amb pèrdua de dades, o que falli el sistema.\n"
 "\n"
 
@@ -1008,7 +1008,7 @@ msgid ""
 "Some projects were not saved properly the last time Audacity was run.\n"
 "Fortunately, the following projects can be automatically recovered:"
 msgstr ""
-"Alguns projectes no es van desar bé la darrera vegada que es va utilitzar "
+"Alguns projectes no es van desar bé l’última vegada que es va executar "
 "Audacity.\n"
 "Per sort, els projectes següents poden ser recuperats de manera automàtica:"
 
@@ -1024,7 +1024,7 @@ msgstr "Nom"
 #: src/AutoRecovery.cpp:92
 msgid "After recovery, save the project to save the changes to disk."
 msgstr ""
-"Un cop recuperat, deseu el projecte per tal de guardar els canvis al disc."
+"Un cop recuperat, deseu el projecte per tal de desar els canvis al disc."
 
 #: src/AutoRecovery.cpp:96
 msgid "Quit Audacity"
@@ -1294,7 +1294,7 @@ msgid ""
 "Copying these files into your project will remove this dependency.\n"
 "This is safer, but needs more disk space."
 msgstr ""
-"Si copieu aquests fitxers dins del vostre projecte eliminareu aquesta "
+"Si copieu aquests fitxers dins del vostre projecte, eliminareu aquesta "
 "dependència.\n"
 "Això és més segur, però requereix més espai de disc."
 
@@ -1371,7 +1371,7 @@ msgid ""
 "If you proceed, your project will not be saved to disk. Is this what you "
 "want?"
 msgstr ""
-"Si ho feu, el vostre projecte no es guardarà al disc. És això el que voleu?"
+"Si ho feu, el vostre projecte no es desarà al disc. És això el que voleu?"
 
 #: src/Dependencies.cpp:556
 msgid ""
@@ -1387,7 +1387,7 @@ msgstr ""
 "\n"
 "Si modifiqueu el projecte fent que tingui dependències externes de fitxers, "
 "deixarà de ser \"autocontingut\". En aquest estat, si el deseu sense copiar-"
-"hi tots els fitxers externs podríeu perdre dades."
+"hi tots els fitxers externs, podríeu perdre dades."
 
 #: src/Dependencies.cpp:561
 msgid "Dependency Check"
@@ -1533,7 +1533,7 @@ msgstr ""
 "Observeu que en la segona opció el so \n"
 "no pot ser un silenci. \n"
 "\n"
-"Si escolliu la tercera opció es desarà el \n"
+"Si escolliu la tercera opció, es desarà el \n"
 "projecte en el seu estat actual, a no ser que escolliu \"Tanca \n"
 "el projecte immediatament\" en posteriors avisos d'error."
 
@@ -1617,7 +1617,7 @@ msgstr ""
 "podreu intentar localitzar i restablir els fitxers desapareguts \n"
 "a la seva ubicació prèvia. \n"
 "\n"
-"Si escolliu la segona opció tingueu en compte que \n"
+"Si escolliu la segona opció, tingueu en compte que \n"
 "l'ona de so podria no mostrar el silenci."
 
 #: src/DirManager.cpp:1569
@@ -3227,7 +3227,7 @@ msgstr "Mou el focus a la primera pista"
 
 #: src/Menus.cpp:1168
 msgid "Move Focus to Last Track"
-msgstr "Mou el focus a la darrera pista"
+msgstr "Mou el focus a l’última pista"
 
 #: src/Menus.cpp:1171
 msgid "Move Focus to Previous and Select"
@@ -4297,8 +4297,8 @@ msgstr ""
 "\n"
 "Si l'heu desat, el projecte no tindrà cap pista.\n"
 "\n"
-"Per guardar les pistes que teníeu anteriorment obertes\n"
-"feu Cancel·la, Edita > Desfés fins que totes les pistes\n"
+"Per desar les pistes que teníeu anteriorment obertes:\n"
+"Cancel·la, Edita > Desfés fins que totes les pistes\n"
 "estiguin obertes, i després Fitxer > Desa el projecte."
 
 #: src/Project.cpp:2142
@@ -4464,7 +4464,7 @@ msgstr ""
 "Actualment el vostre projecte està buit.\n"
 "Si el deseu, el projecte no tindrà cap pista.\n"
 "\n"
-"Per guardar les pistes que teníeu anteriorment obertes:\n"
+"Per desar les pistes que teníeu anteriorment obertes:\n"
 "Feu clic a 'No', Edita > Desfés fins que totes les pistes\n"
 "estiguin obertes, i després Fitxer > Desa el projecte.\n"
 "\n"
@@ -5390,7 +5390,7 @@ msgstr "Edita, Preferències..."
 #: src/TrackPanel.cpp:1874
 #, c-format
 msgid "Multi-Tool Mode: %s for Mouse and Keyboard Preferences."
-msgstr "Mode multi-eina: Feu %s per veure les preferències de ratolí i teclat."
+msgstr "Mode multieina: Feu %s per veure les preferències de ratolí i teclat."
 
 #: src/TrackPanel.cpp:1905
 msgid "Click and drag to set frequency bandwidth."
@@ -5805,7 +5805,7 @@ msgid ""
 "There was a problem with your last action. If you think\n"
 "this is a bug, please tell us exactly where it occurred."
 msgstr ""
-"Hi ha hagut un problema amb la darrera acció. Si creieu que és degut\n"
+"Hi ha hagut un problema amb l’última acció. Si creieu que és degut\n"
 "a un error del programa, expliqueu-nos exactament com ha ocorregut."
 
 #: src/commands/CommandManager.cpp:1066
@@ -6643,8 +6643,8 @@ msgid ""
 "Generates dual-tone multi-frequency (DTMF) tones like those produced by the "
 "keypad on telephones"
 msgstr ""
-"Genera tons duals multi freqüència (DTMF) com els que produeixen els "
-"telèfons de tecles"
+"Genera tons duals multifreqüència (DTMF) com els que produeixen els telèfons "
+"de tecles"
 
 #: src/effects/DtmfGen.cpp:307
 msgid "DTMF sequence:"
@@ -8683,7 +8683,7 @@ msgstr "Efectes VST"
 
 #: src/effects/VST/VSTEffect.cpp:317
 msgid "Adds the ability to use VST effects in Audacity."
-msgstr "Afegeix la capacitat d'utilitzar efectes VST amb Audacity:"
+msgstr "Afegeix la capacitat d'utilitzar efectes VST amb Audacity."
 
 #: src/effects/VST/VSTEffect.cpp:484
 #, c-format
@@ -8716,7 +8716,7 @@ msgstr ""
 #: src/effects/VST/VSTEffect.cpp:763
 msgid "on each iteration. Smaller values will cause slower processing and "
 msgstr ""
-"en cada iteració. Si indiqueu valors petits s'alentirà el processament i "
+"en cada iteració. Si indiqueu valors petits, s’alentirà el processament i "
 
 #: src/effects/VST/VSTEffect.cpp:764
 msgid "some effects require 8192 samples or less to work properly. However "
@@ -8753,7 +8753,7 @@ msgstr ""
 #: src/effects/audiounits/AudioUnitEffect.cpp:348
 #: src/effects/ladspa/LadspaEffect.cpp:371 src/effects/lv2/LV2Effect.cpp:219
 msgid "audio to Audacity. When not compensating for this delay, you will "
-msgstr "l'àudio a Audacity. Si no compenseu aquest retard observareu "
+msgstr "l'àudio a Audacity. Si no compenseu aquest retard, observareu "
 
 #: src/effects/VST/VSTEffect.cpp:786
 #: src/effects/audiounits/AudioUnitEffect.cpp:349
@@ -9498,8 +9498,8 @@ msgstr "FFmpeg : ERROR - Queden massa dades."
 #: src/export/ExportFFmpeg.cpp:691
 msgid "FFmpeg : ERROR - Couldn't write last audio frame to output file."
 msgstr ""
-"FFmpeg : ERROR - No s'ha pogut escriure la darrera trama d'àudio al fitxer "
-"de sortida."
+"FFmpeg : ERROR - No s'ha pogut escriure l’última trama d'àudio al fitxer de "
+"sortida."
 
 #: src/export/ExportFFmpeg.cpp:746
 msgid "FFmpeg : ERROR - nAudioFrameSizeOut too large."
@@ -10018,7 +10018,7 @@ msgstr "No podeu eliminar un valor predefinit que no tingui nom"
 #: src/export/ExportFFmpegDialogs.cpp:1749
 #, c-format
 msgid "Delete preset '%s'?"
-msgstr "Voleu eliminar la el valor predefinit '%s'?"
+msgstr "Voleu eliminar el valor predefinit '%s'?"
 
 #: src/export/ExportFFmpegDialogs.cpp:1768
 msgid "You can't save a preset without name"
@@ -10256,7 +10256,7 @@ msgid ""
 msgstr ""
 "Esteu enllaçant amb lame_enc.dll v%d.%d. Aquesta versió no és compatible amb "
 "Audacity %d.%d.%d.\n"
-"Si us plau, descarregueu la darrera versió de la biblioteca LAME MP3."
+"Si us plau, descarregueu l’última versió de la biblioteca LAME MP3."
 
 #: src/export/ExportMP3.cpp:1420
 msgid ""
@@ -10769,7 +10769,7 @@ msgid ""
 "If it is uncompressed, try importing it using \"Import Raw\"."
 msgstr ""
 "Audacity no reconeix el tipus del fitxer '%s'.\n"
-"Si conté so no comprimit proveu d'importar-lo amb l'opció \"Importa dades "
+"Si conté so no comprimit, proveu d'importar-lo amb l'opció \"Importa dades "
 "crues\"."
 
 #: src/import/Import.cpp:729
@@ -10989,7 +10989,7 @@ msgstr "Ordre de bits no significatiu (endianness)"
 #. know the correct technical word.
 #: src/import/ImportRaw.cpp:356
 msgid "Little-endian"
-msgstr "El bit menor darrera (little-endian)"
+msgstr "El bit menor darrere (little-endian)"
 
 #  i18n-hint: Refers to byte-order.  Don't translate this if you don't
 #  know the correct technical word.
@@ -10997,7 +10997,7 @@ msgstr "El bit menor darrera (little-endian)"
 #. know the correct technical word.
 #: src/import/ImportRaw.cpp:359
 msgid "Big-endian"
-msgstr "El bit major darrera (big-endian)"
+msgstr "El bit major darrere (big-endian)"
 
 #. i18n-hint: Refers to byte-order.  Don't translate "endianness" if you don't
 #. know the correct technical word.
@@ -11162,7 +11162,7 @@ msgid ""
 "be cached in memory and will be written to disk."
 msgstr ""
 "Si la memòria disponible del sistema cau per sota d'aquest valor, el so ja "
-"no es guardarà a\n"
+"no es desarà\n"
 "a la memòria cau, sinó que s'escriurà directament al disc."
 
 #: src/prefs/DirectoriesPrefs.cpp:129
@@ -11252,7 +11252,7 @@ msgstr "Comprova si hi ha connectors actualitzats quan s'iniciï Audacity"
 
 #: src/prefs/EffectsPrefs.cpp:145
 msgid "Rescan plugins next time Audacity is started"
-msgstr "Torna a escanejar els efectes la próxima vegada que Audacity s'iniciï"
+msgstr "Torna a escanejar els efectes la següent vegada que Audacity s'iniciï"
 
 #: src/prefs/EffectsPrefs.cpp:153
 msgid "Instruction Set"
@@ -11592,7 +11592,7 @@ msgstr ""
 "\n"
 "\t'%s'\n"
 "\n"
-"Feu clic a D'Acord per assignar la drecera a\n"
+"Feu clic a D’acord per assignar la drecera a\n"
 "\n"
 "\t'%s'\n"
 "\n"
@@ -11994,7 +11994,7 @@ msgstr "-Roda del ratolí"
 
 #: src/prefs/MousePrefs.cpp:166
 msgid "Zoom in or out on Mouse Pointer"
-msgstr "Amplia o redueix allò assenyalat pel punter del ratolí"
+msgstr "Amplia o redueix el zoom amb el punter del ratolí"
 
 #: src/prefs/PlaybackPrefs.cpp:57
 msgid "Effects Preview"
@@ -12962,7 +12962,7 @@ msgstr "Feu clic i arrossegueu per a moure una pista en el temps"
 
 #: src/toolbars/ToolsToolBar.cpp:161
 msgid "Multi-Tool Mode"
-msgstr "Mode multi-eina"
+msgstr "Mode multieina"
 
 #: src/toolbars/ToolsToolBar.cpp:199
 msgid "Slide Tool"
