--- a/mac/Install.txt
+++ b/mac/Install.txt
@@ -2,11 +2,13 @@
    DMG window to the /Applications folder icon on the right. Alternatively,
    drag the "Audacity.app" icon to any other location of your choosing. 
 
-* Do not double-click the "Audacity" icon in the DMG then launch Audacity 
+* Do not double-click the "Audacity" icon in the DMG to launch Audacity 
    from there. 
+   
+* If you still have an "Audacity" installation folder for a version before 
+   2.1.3, you will see working duplicates of Audacity's shipped Nyquist
+   plug-ins in the Generate, Effect or Analyze Menu. You may also see 
+   non-working duplicates of other previously shipped plug-ins. To clean
+   up the duplicates please see:
+   http://manual.audacityteam.org/man/installing_and_updating_audacity_on_mac_os_x.html .
 
-* If you are a first-time user of Audacity, security settings on 
-   OS X 10.7 or later may block Audacity being launched. To permanently
-   enable Audacity launch, right-click or control-click on the Audacity 
-   application in Finder, choose "Open", then in the dialog box that 
-   appears, choose "Open". 
